# Nyx

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEST_READY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.legacy  EMERGENCY_DEPLOY.md  EMERGENCY_FIX_COMPLETE.md  FINAL_VALIDATION_REPORT.json  FIXED_CONNECTION_ISSUE.md  HYBRID_PQ_HANDSHAKE_COMPLETION_REPORT.md  IMPLEMENTATION_REPORT.md  LICENSE-APACHE  LICENSE-MIT  MULTIPATH_IMPLEMENTATION_REPORT.md  Makefile  NETCAT_FINAL_SOLUTION.md  ONE_LINER_SETUP.md  OPTIMIZATION_SUMMARY.md  PERFECTION_ACHIEVED.md  QUICK_DEPLOY.md  README.md  REFACTORING_COMPLETE_REPORT.md  REFACTORING_SUMMARY.md  SECURITY.md  SECURITY_AUDIT_COMPREHENSIVE_REPORT.md  SECURITY_IMPLEMENTATION_LOG.md  SUCCESS_REPORT.md  TODO.md  UBUNTU_DEPLOY.md  VALUES_YAML_FIXED.md  baseline_benchmark.txt  debug_accumulator.rs  docker-compose.grafana.yml  fec_optimized_benchmark.txt  install-tools.bat  kind-config.yaml  mkdocs.yml  (+14 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: capability_negotiation.rs  cmix_batch.rs  extended_packet.rs  fuzz_target_1.rs  ice_candidate.rs  pathbuilder_advanced.rs  plugin_parser.rs  quic_packet.rs  stream_parser_advanced.rs  vdf_proof.rs  vdf_proof_comprehensive.rs
nyx-cli/: Cargo.toml  Dockerfile  README.md  build.rs
nyx-cli/i18n/: en.ftl  ja.ftl  zh.ftl
nyx-cli/src/: i18n.rs  main.rs  main_grpc_backup.rs  main_pure_rust.rs  nyx.api.rs  prometheus_client.rs
nyx-cli/tests/: alerts_cmd.rs  config_empty_token.rs  config_show.rs  cookie_and_env.rs  help_and_frame_limit.rs  integration_tests.rs  performance_tests.rs  status_and_reconnect.rs  toml_parsing.rs  write_template.rs
nyx-conformance/: Cargo.toml  README.md
nyx-conformance/src/: lib.rs  network_simulator.rs  property_tester.rs
nyx-conformance/tests/: adaptive_cover.rs  aead_comprehensive.rs  capability.rs  capability_audit_logging.rs  capability_extended.rs  capability_negotiation_properties.rs  ci_compliance_gates.rs  close.rs  close_error.rs  cmix.rs  cmix_negative.rs  cmix_vdf.rs  compliance_matrix.rs  component_integration.rs  congestion.rs  core.rs  cover_lambda.rs  cover_lambda5.rs  cryptographic_operation_properties.rs  e2e_full.rs  e2e_scenarios.rs  e2e_scenarios_simple.rs  fec.rs  fec_parity.rs  fec_reconstruct.rs  fec_shuffle.rs  frame.rs  frame_reserved.rs  handshake.rs  header_error.rs  header_invalid.rs  hole_punch.rs  hole_punch_success.rs  ice.rs  ice_handshake.rs  ice_txid_fail.rs  integration_basic.rs  kdf.rs  kyber.rs  load_testing_performance.rs  (+48 more)
nyx-control/: Cargo.toml  build.rs
nyx-control/src/: dht.rs  lib.rs  probe.rs  push.rs  rendezvous.rs  settings.rs  settings_sync.rs
nyx-control/tests/: dht.rs  dht_persist.rs  settings.rs
nyx-core/: Cargo.toml  README.md  build.rs
nyx-core/benches/: comprehensive_performance_benchmarks.rs  mobile_iot_benchmark.rs  performance_optimizations.rs  push_gateway_enhanced.rs  realistic_production_benchmark.rs  security_scalability_benchmark.rs  zero_copy_benchmarks.rs
nyx-core/docs/: sandbox.md  sandbox_implementation.md
nyx-core/examples/: using_core.rs
nyx-core/src/: advanced_routing.rs  capability.rs  cmix.rs  cmix_integration.rs  compliance.rs  config.rs  error.rs  ffi_detector.rs  i18n.rs  lib.rs  low_power.rs  mobile.rs  multipath_dataplane.rs  openbsd.rs  path_monitor.rs  performance.rs  plugin_framework.rs  push.rs  push_gateway.rs  sandbox.rs  security.rs  types.rs  windows.rs  zero_copy.rs
nyx-core/tests/: core_smoke.rs  low_power_mobile_ffi.rs  low_power_screen_off_ratio.rs  sandbox_cross_platform.rs  sandbox_platform_specific.rs  zero_copy_tests.rs
nyx-crypto/: Cargo.toml  HYBRID_HANDSHAKE.md  README.md
nyx-crypto/benches/: constant_time.rs
nyx-crypto/docs/: BIKE_STATUS.md
nyx-crypto/src/: aead.rs  bike.rs  hpke.rs  hybrid.rs  hybrid_handshake.rs  kdf.rs  keystore.rs  kyber.rs  lib.rs  noise.rs  pcr.rs  session.rs
nyx-crypto/tests/: bike.rs  hpke_envelope.rs  hybrid.rs  hybrid_e2e.rs  hybrid_handshake_tests.rs  kyber.rs  noise.rs  rekey.rs  x25519.rs  zeroization_audit.rs
nyx-daemon/: Cargo.toml  README.md  build.rs  reputation_store.json
nyx-daemon/benches/: path_builder_advanced.rs  path_builder_advanced.rs.disabled
nyx-daemon/examples/: ipc_client.rs
nyx-daemon/proto/: control.proto
nyx-daemon/src/: alert_system.rs  alert_system_enhanced.rs  alert_system_test.rs  capability.rs  cmix_integration.rs  config_manager.rs  connection_api.rs  connection_manager.rs  errors.rs  event_system.rs  health_monitor.rs  json_util.rs  larmix_feedback.rs  layer_manager.rs  layer_recovery_test.rs  lib.rs  libp2p_network.rs  low_power.rs  main.rs  metrics.rs  multipath_integration.rs  packet_processor.rs  path_builder.rs  path_builder_broken.rs  path_builder_simple.rs  path_performance_test.rs  path_recovery.rs  prometheus_exporter.rs  proof_api.rs  proof_distributor.rs  proto.rs  pure_rust_dht.rs  pure_rust_dht_tcp.rs  pure_rust_p2p.rs  push.rs  screen_off_detection.rs  session_api.rs  session_manager.rs  stream_manager.rs  zero_copy_bridge.rs
nyx-daemon/tests/: advanced_path_builder.rs  alerts_http.rs  alerts_metrics.rs  disk_fd_thread_metrics.rs  low_power_wasm.rs  mix_defaults.rs  otlp_export_smoke.rs  prometheus_metrics.rs  read_one_line.rs  wasm_plugin_handshake.rs
nyx-fec/: Cargo.toml  README.md
nyx-fec/benches/: adaptive_raptorq_bench.rs  adaptive_raptorq_bench_optimized.rs  fec_simd.rs  rs_encode.rs
nyx-fec/docs/: adaptive_redundancy_implementation.md
nyx-fec/src/: lib.rs  padding.rs  raptorq.rs  rs1280.rs  timing.rs
nyx-fec/tests/: adaptive_raptorq_comprehensive.rs  adaptive_raptorq_redundancy.rs
nyx-mobile-ffi/: Cargo.toml  README.md  build.rs
nyx-mobile-ffi/android/: NyxMobileBridge.java  NyxMobileJNI.java
nyx-mobile-ffi/include/: nyx_mobile_ffi.h
nyx-mobile-ffi/ios/: NyxMobile.h  NyxMobile.m
nyx-mobile-ffi/src/: android.rs  common.rs  ios.rs  lib.rs  mobile_api.rs
nyx-sdk-wasm/: Cargo.toml  README.md
nyx-telemetry/: Cargo.toml
nyx-transport/: Cargo.toml  README.md  build.rs
tests/: Cargo.toml  README.md  feature_matrix.rs
tests/src/: lib.rs  (+1 more)
(+433 files in other folders)
