[workspace]
members = [
    "nyx-core",
    "nyx-crypto",
    "nyx-transport",
    "nyx-mix",
    "nyx-fec",
    "nyx-stream",
    "nyx-telemetry", # Prometheus exporter crate
    "nyx-control",
    "nyx-cli",
    "nyx-daemon",
    "nyx-sdk",
    "nyx-sdk-wasm",
    "nyx-conformance",
    "nyx-mobile-ffi", # Mobile platform FFI bindings
    "build-protoc",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z" 

# Reduce link-time memory usage for tests on Windows/MSVC by disabling debug symbols
# and minimizing object fragmentation.
[profile.test]
debug = 0
codegen-units = 1
opt-level = 0

# Package-specific profile overrides (Cargo workspace-wide). This moves per-crate
# tuning out of sub-crates to avoid the warning:
#  "profiles for the non root package will be ignored, specify profiles at the workspace root".
# Keep nyx-mobile-ffi optimized for release builds without impacting other crates.
[profile.release.package.nyx-mobile-ffi]
codegen-units = 1
opt-level = 3
