[package]
name = "nyx-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
honggfuzz = "0.5"
num-bigint = "0.4"

# Added Nyx crates and Tokio runtime for additional fuzz targets
nyx-core = { path = "../nyx-core" }
nyx-mix = { path = "../nyx-mix" }
nyx-crypto = { path = "../nyx-crypto" }
nyx-transport = { path = "../nyx-transport" }
nyx-stream = { path = "../nyx-stream" }

# Serialization libraries for fuzz targets
serde_json = "1.0"
ciborium = "0.2"

# Utilities for fuzz targets
bytes = "1.0"

# Tokio needed to spin a runtime inside fuzz target
tokio = { version = "1", features = ["rt", "macros"] }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "noise_handshake"
path = "fuzz_targets/noise_handshake.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cmix_batch"
path = "fuzz_targets/cmix_batch.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ice_candidate"
path = "fuzz_targets/ice_candidate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "quic_packet"
path = "fuzz_targets/quic_packet.rs"
test = false
doc = false
bench = false
