[package]
name = "nyx-cli"
version = "0.1.0"
edition = "2021"

description = "Nyx command line interface utilities"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", default-features = false, features = ["rt", "rt-multi-thread", "macros", "time", "sync", "fs", "io-util", "net", "signal", "io-std"] }
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ureq = { version = "2.9", default-features = false, features = ["json"] } # Pure Rust HTTP without TLS
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
hex = "0.4"
toml = "0.8" # for nyx.toml (CLI section) parsing
nyx-sdk = { path = "../nyx-sdk" }
nyx-stream = { path = "../nyx-stream" }

[build-dependencies]
# tonic-build = "0.10" # DISABLED: uses ring/openssl

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"


[features]
# Optional build of legacy gRPC-based CLI (archived). Not enabled by default.
grpc-backup = []