[package]
name = "nyx-conformance"
version = "0.1.0"
edition = "2021"

description = "Nyx protocol conformance test suite"
license = "MIT OR Apache-2.0"
authors = ["SeleniaProject"]

[dependencies]
nyx-crypto = { path = "../nyx-crypto" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nyx-core = { path = "../nyx-core" }
nyx-control = { path = "../nyx-control" }
nyx-stream = { path = "../nyx-stream" }
nyx-fec = { path = "../nyx-fec" }
nyx-transport = { path = "../nyx-transport", default-features = false }
nyx-mix = { path = "../nyx-mix" }
rand_distr = "0.4"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
rand = "0.8"
nyx-telemetry = { path = "../nyx-telemetry", optional = true }

[dev-dependencies]
once_cell = "1.19"
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
num-bigint = "0.4"
# Updated to latest version to fix protobuf vulnerability (RUSTSEC-2024-0437)
prometheus = "0.14"
proptest = "1.4"
rand = "0.8"
rand_distr = "0.4"
tokio-test = "0.4"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
pq = ["nyx-crypto/kyber"]
hpke = ["nyx-crypto/hpke"]
classic = ["nyx-crypto/classic"]
hybrid = ["classic", "pq", "nyx-crypto/hybrid"] 
plugin = ["nyx-stream/plugin"]
quic = ["nyx-transport/quic"]
telemetry = ["dep:nyx-telemetry", "nyx-stream/telemetry"]
raptorq = ["nyx-fec/raptorq"]
multipath = ["nyx-core/multipath"]