[package]
name = "nyx-core"
version = "0.1.0"
edition = "2021"

description = "Nyx Core utilities, types, configuration, and error handling."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["sync","time", "macros", "rt", "rt-multi-thread"] }
notify = { version = "6.1" }
fluent-bundle = { version = "0.15" }
unic-langid = "0.9"
once_cell = "1.19"
ciborium = "0.2"
tokio-stream = { version = "0.1", features=["sync"] }
async-trait = "0.1"
anyhow = "1"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
rand = { version = "0.8", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
serde_bytes = "0.11"
num_cpus = "1.16"
socket2 = "0.5"
# Needed for push module and concurrent maps
dashmap = "5.5"

# Optional telemetry integration
nyx-telemetry = { path = "../nyx-telemetry", optional = true }

# Optional crypto integration
nyx-crypto = { path = "../nyx-crypto", optional = true }

# Optional FEC integration (removed due to circular dependency)
# nyx-fec integration is handled through traits and feature gates

# Optional push notification dependencies (removed to keep build TLS/C-free)
# fcm = { version = "0.9", optional = true }
# a2 = { version = "0.10", optional = true }

# Optional big integer and num traits for cmix integration
num-bigint = { package = "num-bigint", version = "0.4", optional = true }
num-traits = { package = "num-traits", version = "0.2", optional = true }

# Optional CBOR alt crate for plugin framework (enable serde support)
cbor4ii = { version = "0.3", optional = true, features = ["serde1"] }

[features]
default = []
# Enable automatic error metric recording.
telemetry = ["nyx-telemetry"]
# Enable mobile platform integration
mobile = ["nyx-crypto"]
# Enable mobile FFI based low power triggers (polling bridge to nyx-mobile-ffi)
mobile_ffi = ["nyx-mobile-ffi"]
# Push notification feature flags kept for API gating, but without pulling TLS deps
push = []
fcm = []
apns = []
# Optional modules (off by default to avoid build breakage)
plugin_framework = ["cbor4ii"]
multipath_dp = []
cmix = ["num-bigint", "num-traits"]
# Enable zero-copy integration with crypto components (fec handled separately)
zero_copy = ["nyx-crypto"]
# Alias feature to enable optional dependency `nyx-crypto`
nyx-crypto = ["dep:nyx-crypto"]

[dependencies.nyx-mobile-ffi]
path = "../nyx-mobile-ffi"
optional = true

[target.'cfg(target_os = "linux")'.dependencies]
anyhow = "1"
# Use pure-Rust seccomp-bpf compiler/runtime instead of libseccomp bindings
seccompiler = "0.4"
seccomp = "0.1"

[target.'cfg(target_os = "openbsd")'.dependencies]
pledge = "0.4"
unveil = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = ["Win32_Foundation","Win32_System_Threading","Win32_System_JobObjects", "Win32_Security"] }
win32job = "2.0"

[dev-dependencies]
hex-literal = "0.4"
tempfile = "3.8"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
futures = "0.3"
nyx-crypto = { path = "../nyx-crypto" }
nyx-fec = { path = "../nyx-fec" }

[[bench]]
name = "zero_copy_benchmarks"
harness = false

[build-dependencies]
protoc-bin-vendored = "3"
