[package]
name = "nyx-daemon"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
# Minimal default: core daemon path builder only
default = ["path-builder", "windows"]
# Path builder no longer pulls in metrics by default; metrics optional
path-builder = []
experimental-dht = []
experimental-p2p = []
experimental-events = []
experimental-alerts = []
experimental-metrics = ["experimental-alerts"]
experimental-all = [
	"experimental-dht",
	"experimental-p2p",
	"experimental-events",
	"experimental-alerts",
	"experimental-metrics"
]
 # Internal advanced algorithms (kept for research; off by default to suppress dead_code warnings)
 internal-advanced-path = []
 # Added for capability flags referenced in main.rs (previously produced unexpected cfg warnings)
 mpr_experimental = []
 hybrid = []
 cmix = []
 plugin = []
 low_power = []
 # Enable Windows API bindings for metrics on Windows builds
 windows = ["dep:windows"]

[dependencies]
async-trait = "0.1"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# tonic = { version = "0.10", default-features = false, features = ["transport", "prost", "codegen"] } # DISABLED: uses ring/openssl
tokio-stream = { version = "0.1", features = ["net"] }
clap = { version = "4.0", features = ["derive"] }

# Core Nyx components
nyx-core = { path = "../nyx-core" }
nyx-transport = { path = "../nyx-transport" }
nyx-stream = { path = "../nyx-stream" }
nyx-mix = { path = "../nyx-mix" }
nyx-control = { path = "../nyx-control" }
nyx-telemetry = { path = "../nyx-telemetry" }
nyx-crypto = { path = "../nyx-crypto" }
nyx-fec = { path = "../nyx-fec" }

# System information for health checks (pure Rust, cross-platform)
sysinfo = { version = "0.30", default-features = true }

# Additional dependencies for comprehensive implementation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
arc-swap = "1.6"
parking_lot = "0.12"
crossbeam-channel = "0.5"
futures = "0.3"
futures-util = "0.3"
pin-project = "1.1"
bytes = "1.5"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"

# System monitoring
url = "2.5"
gethostname = "0.4"
windows = { version = "0.57", features = [
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Foundation"
], optional = true }

# Configuration and serialization
toml = "0.8"
config = "0.14"

# DHT and P2P networking - libp2p DISABLED due to ring C/C++ dependency
# libp2p = { version = "0.53", features = ["kad", "mdns", "yamux", "tcp", "dns", "tokio", "macros", "noise", "request-response"] }
# libp2p-identity = "0.2"
# libp2p-kad = "0.45"

# Pure Rust cryptography to replace libp2p (temporarily disabled due to ring dependency)
# rustls = { version = "0.21", default-features = false, features = ["logging", "tls12"] }
# tokio-rustls = "0.24"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
blake3 = "1.8"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
rand = "0.8"
bincode = "1.3"
hex = "0.4"
multiaddr = "0.18"

# Networking and async utilities
socket2 = "0.5"

# Logging
log = "0.4"

# Metrics and telemetry
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
opentelemetry = { version = "0.21", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.14", features = ["tokio"] }
opentelemetry-semantic-conventions = "0.13"

# HTTP server for Prometheus metrics
axum = { version = "0.7", default-features = false, features = ["http1", "json", "matched-path", "original-uri", "tokio"] }

# Crypto and security
# blake3 = "1.5" # Moved to P2P section above
# Pure Rust DHT dependencies (ed25519-dalek already present above)
# Additional DHT support (hex already present above)

# Pure Rust TLS for tonic (avoiding ring dependency) - DISABLED to avoid C++ deps
# rustls = { version = "0.21", default-features = false, features = ["logging", "std", "tls12"] }
# rustls-pemfile = "1.0"
# tonic-rustls = "0.2"

# Pure Rust crypto backend for rustls (no ring/aws-lc-rs) - DISABLED
# webpki-roots = "0.25"

# Data structures and algorithms
indexmap = "2.1"
lru = "0.12"
priority-queue = "1.3"

# Path and routing
petgraph = "0.6"
geo = "0.27"

# DNS resolver (Pure Rust)
hickory-resolver = "0.24"

# Database for peer persistence (Pure Rust alternative)
redb = { version = "2.1", features = ["logging"] }

# DHT and networking - Pure Rust implementation (100% Pure Rust, no C/C++ deps)
# Avoiding ALL ring dependencies including rustls, tokio-rustls
# Using plain TCP/TLS with pure Rust crypto
trust-dns-resolver = "0.23"
# Pure Rust TLS alternative (no ring dependency)
native-tls = "0.2"  # Pure Rust TLS implementation
tokio-native-tls = "0.3"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[build-dependencies]
# tonic-build = "0.10" # DISABLED: uses ring/openssl 