[package]
name = "nyx-fec"
version = "0.1.0"
edition = "2021"

description = "Nyx Reed-Solomon FEC wrapper for 1280B fixed packets"
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
# Avoid enabling any optional features that could pull C/C++ backends on docs.rs
features = []

[dependencies]
reed-solomon-erasure = "6"
## Keep the crate lean: other deps were unused in this crate. Add back only if required.

[features]
default = []
raptorq = []
telemetry = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
