[package]
name = "nyx-mobile-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Nyx Team"]
description = "Mobile platform FFI bindings for iOS and Android"
license = "MIT"

[lib]
name = "nyx_mobile_ffi"
# Include rlib so other Rust crates (tests) can link the symbols directly.
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
once_cell = "1.19"
nyx-telemetry = { path = "../nyx-telemetry", optional = true }
metrics = { version = "0.22", optional = true }

[features]
default = []
ios = []
android = []
telemetry = ["dep:nyx-telemetry", "dep:metrics", "nyx-telemetry/prometheus"]
telemetry-otlp = ["telemetry", "nyx-telemetry/otlp"]
telemetry-otlp_exporter = ["telemetry", "nyx-telemetry/otlp_exporter"]

[build-dependencies]
cbindgen = "0.26"
