[package]
name = "nyx-mobile-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Nyx Team"]
description = "Mobile platform FFI bindings for iOS and Android"
license = "MIT"

[lib]
name = "nyx_mobile_ffi"
# Include rlib so other Rust crates (tests) can link the symbols directly.
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
once_cell = "1.19"
thiserror = "1.0"

# Optional telemetry (no Nyx dependencies to avoid circular dependency)
metrics = { version = "0.22", optional = true }

[features]
default = []
ios = []
android = []
telemetry = ["dep:metrics"]
telemetry-otlp = ["telemetry"]
telemetry-otlp_exporter = ["telemetry"]

[build-dependencies]
# Updated to latest version to resolve dependency vulnerabilities
cbindgen = "0.29"
