[package]
name = "nyx-telemetry"
version = "0.1.0"
edition = "2021"

description = "Comprehensive telemetry with OpenTelemetry OTLP and Prometheus support for Nyx."
license = "MIT OR Apache-2.0"

[dependencies]
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
once_cell = "1.19"
tracing-subscriber = "0.3"
tracing-bunyan-formatter = "0.3"
sysinfo = "0.30"
opentelemetry = { version = "0.29", default-features = false, features = ["trace", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic", "trace", "metrics"], optional = true }
opentelemetry-semantic-conventions = { version = "0.29", optional = true }
tracing-opentelemetry = { version = "0.30", optional = true }
chrono = { version = "0.4", default-features = false, features = ["std"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = { version = "0.3", optional = true }
# tonic is not enabled by default; pulled via opentelemetry-otlp feature when opted in
opentelemetry-proto = { version = "0.29", features = ["tonic"], optional = true }
tonic = { version = "0.12", features = ["transport"], optional = true }
anyhow = "1.0"
rand = "0.8"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"], optional = true }

[features]
# Default build excludes OTLP to avoid heavy deps; Prometheus path only
default = ["prometheus"]
# Disable flamegraph on Windows/MSVC to avoid nix/libc POSIX deps; keep feature for non-Windows
flamegraph = ["dep:pprof", "chrono"]
# Enable OTLP OpenTelemetry integration
otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
    "dep:uuid",
]
otlp_exporter = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry-proto",
    "dep:tonic",
]
prometheus = ["dep:warp"]

[package.metadata.docs.rs]
features = ["flamegraph", "otlp", "prometheus"]

authors = ["NyxNet Contributors"]

[dev-dependencies]
hyper = { version = "0.14", features = ["client", "tcp"] }
ureq = { version = "2.9", default-features = false, features = ["json"] }
tokio-stream = "0.1"

[target.'cfg(unix)'.dependencies]
pprof = { version = "0.11", optional = true }
